ホットキー機能の追加と設定アプリの実装
- pyperclip、keyboard、win32guiライブラリの条件付きインポートを追加
- Kiro-IDEウィンドウに強制フォーカスを設定する機能を実装
- ホットキー操作（テンプレート保存、復旧コマンド送信、一時停止/再開、監視停止）を追加
- 設定GUIアプリケーションを新規作成し、監視エリアとチャット欄の設定機能を実装
- README.mdにホットキー操作と初期設定手順を追記
- .gitignoreにtest_scripts/を追加

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ dependencies = [
     "numpy>=1.26.0",
     "pyautogui>=0.9.54",
     "Pillow>=10.0.0",
+    "keyboard>=0.13.5",
+    "pywin32>=306; sys_platform == 'win32'",
+    "pyperclip>=1.8.2",
 ]
 
 [project.optional-dependencies]
