--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,12 @@ authors = [{name = "Kiro Development Team"}]
 readme = "README.md"
 requires-python = ">=3.8"
 license = {text = "MIT"}
+
+
 keywords = ["kiro", "auto-recovery", "screen-capture", "error-detection"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
@@ -40,6 +41,7 @@ dev = [
     "isort>=5.13.0",
     "mypy>=1.8.0",
     "pylint>=3.0.0",
+    "ruff>=0.1.0",
     "pre-commit>=3.6.0",
     "pytest>=8.0.0",
     "pytest-cov>=4.1.0",
