--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e ".[dev,test]"
+        pip install opencv-python numpy pyautogui Pillow keyboard pywin32 pyperclip
+        pip install ruff pytest pytest-cov black isort mypy pylint
 
     - name: Lint with ruff
       run: ruff check .
@@ -61,7 +62,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e ".[dev]"
+        pip install opencv-python numpy pyautogui Pillow keyboard pywin32 pyperclip
+        pip install ruff pytest pytest-cov black isort mypy pylint
 
     - name: Check code formatting with black
       run: black --check .
