--- a/.pylintrc
+++ b/.pylintrc
@@ -1,23 +1,24 @@
 [MASTER]
-# Python 3.8+ をサポート
-py-version = 3.8
-
-# 並列処理を有効化
+py-version = 3.9
 jobs = 0
-
-# 設定ファイルの場所
-rcfile = .pylintrc
+extension-pkg-allow-list = cv2,win32gui,win32con
 
 [MESSAGES CONTROL]
-# 無視する警告
 disable = 
+    C0103,  # invalid-name
     C0114,  # missing-module-docstring
     C0115,  # missing-class-docstring
     C0116,  # missing-function-docstring
+    E1101,  # no-member
+    I1101,  # c-extension-no-member
+    R0902,  # too-many-instance-attributes
     R0903,  # too-few-public-methods
     R0913,  # too-many-arguments
+    W0611,  # unused-import
+    W0612,  # unused-variable
     W0621,  # redefined-outer-name
     W0703,  # broad-except
+    W1203,  # logging-fstring-interpolation
 
 [REPORTS]
 # 出力形式
@@ -39,35 +40,7 @@ bad-names = foo,bar,baz,toto,tutu,tata
 # 名前の正規表現パターン
 name-group = 
 
-# 関数名の正規表現パターン
-function-rgx = [a-z_][a-z0-9_]{2,30}$
-
-# 変数名の正規表現パターン
-variable-rgx = [a-z_][a-z0-9_]{2,30}$
-
-# 定数名の正規表現パターン
-const-rgx = (([A-Z_][A-Z0-9_]*)|(__.*__))$
-
-# 属性名の正規表現パターン
-attr-rgx = [a-z_][a-z0-9_]{2,30}$
-
-# 引数名の正規表現パターン
-argument-rgx = [a-z_][a-z0-9_]{2,30}$
-
-# クラス名の正規表現パターン
-class-rgx = [A-Z_][a-zA-Z0-9]+$
-
-# モジュール名の正規表現パターン
-module-rgx = (([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$
-
-# メソッド名の正規表現パターン
-method-rgx = [a-z_][a-z0-9_]{2,30}$
-
-# 関数名の正規表現パターン
-func-rgx = [a-z_][a-z0-9_]{2,30}$
-
-# 行の最大長
-max-line-length = 88
+good-names = i,j,k,ex,Run,_,id,e,f,x,y,w,h
 
 [SIMILARITIES]
 # 最小行数
@@ -83,21 +56,7 @@ ignore-docstrings = yes
 ignore-imports = yes
 
 [FORMAT]
-# 最大行長
-max-line-length = 88
-
-# インデントサイズ
-indent-size = 4
-
-# インデント文字
-indent-string = '    '
-
-# インデント後の行の最大長
-indent-after-paren = 4
-
-# 期待される行の最大長
-expected-line-ending-format = 
+max-line-length = 88 
 
 [MISCELLANEOUS]
-# 注釈の正規表現
 notes = FIXME,XXX,TODO
