--- a/.pylintrc
+++ b/.pylintrc
@@ -2,61 +2,33 @@
 py-version = 3.9
 jobs = 0
 extension-pkg-allow-list = cv2,win32gui,win32con
+generated-members = cv2.*
 
 [MESSAGES CONTROL]
 disable = 
     C0103,  # invalid-name
-    C0114,  # missing-module-docstring
     C0115,  # missing-class-docstring
-    C0116,  # missing-function-docstring
     E1101,  # no-member
     I1101,  # c-extension-no-member
+    R0801,  # duplicate-code
     R0902,  # too-many-instance-attributes
     R0903,  # too-few-public-methods
     R0913,  # too-many-arguments
+    R1705,  # no-else-return
+    R1710,  # inconsistent-return-statements
     W0611,  # unused-import
     W0612,  # unused-variable
     W0621,  # redefined-outer-name
-    W0703,  # broad-except
+    W0718,  # broad-exception-caught
     W1203,  # logging-fstring-interpolation
 
 [REPORTS]
-# 出力形式
 output-format = text
-
-# 評価を表示
-score = yes
-
-# 統計情報を表示
-reports = yes
+score = no
+reports = no
 
 [BASIC]
-# 良い変数名のパターン
-good-names = i,j,k,ex,Run,_,id
-
-# 悪い変数名のパターン
-bad-names = foo,bar,baz,toto,tutu,tata
-
-# 名前の正規表現パターン
-name-group = 
-
 good-names = i,j,k,ex,Run,_,id,e,f,x,y,w,h
 
-[SIMILARITIES]
-# 最小行数
-min-similarity-lines = 4
-
-# 無視するコメント
-ignore-comments = yes
-
-# 無視するドキュメント文字列
-ignore-docstrings = yes
-
-# 無視するインポート
-ignore-imports = yes
-
 [FORMAT]
-max-line-length = 88 
-
-[MISCELLANEOUS]
-notes = FIXME,XXX,TODO
+max-line-length = 88
