--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,19 +28,19 @@ jobs:
         pip install ruff pytest pytest-cov black isort mypy pylint
 
     - name: Lint with ruff
-      run: ruff check .
+      run: python -m ruff check .
 
     - name: Format check with ruff
-      run: ruff format --check .
+      run: python -m ruff format --check .
 
     - name: Lint with flake8
-      run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+      run: python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 
     - name: Type check with mypy
-      run: mypy kiro_auto_recovery.py kiro_setup.py
+      run: python -m mypy kiro_auto_recovery.py kiro_setup.py --ignore-missing-imports
 
     - name: Test with pytest
-      run: pytest tests/ --cov=. --cov-report=xml --cov-report=html
+      run: python -m pytest tests/ --cov=. --cov-report=xml --cov-report=html
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
@@ -66,10 +66,10 @@ jobs:
         pip install ruff pytest pytest-cov black isort mypy pylint
 
     - name: Check code formatting with black
-      run: black --check .
+      run: python -m black --check .
 
     - name: Check import sorting with isort
-      run: isort --check-only .
+      run: python -m isort --check-only .
 
     - name: Lint with pylint
-      run: pylint kiro_auto_recovery.py kiro_setup.py
+      run: python -m pylint kiro_auto_recovery.py kiro_setup.py
