--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install opencv-python numpy pyautogui Pillow keyboard pywin32 pyperclip
-        pip install ruff pytest pytest-cov black isort mypy pylint
+        pip install ruff pytest pytest-cov black isort mypy pylint flake8
 
     - name: Lint with ruff
       run: python -m ruff check .
@@ -63,7 +63,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install opencv-python numpy pyautogui Pillow keyboard pywin32 pyperclip
-        pip install ruff pytest pytest-cov black isort mypy pylint
+        pip install ruff pytest pytest-cov black isort mypy pylint flake8
 
     - name: Check code formatting with black
       run: python -m black --check .
