--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,6 +128,9 @@ omit = [
     "*/venv/*",
 ]
 
+[tool.setuptools]
+py-modules = ["kiro_auto_recovery", "kiro_setup"]
+
 [tool.coverage.report]
 exclude_lines = [
     "pragma: no cover",
