--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       run: python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 
     - name: Type check with mypy
-      run: python -m mypy kiro_auto_recovery.py kiro_setup.py --ignore-missing-imports
+      run: python -m mypy archive/kiro_auto_recovery.py archive/kiro_setup.py --ignore-missing-imports
 
     - name: Test with pytest
       run: python -m pytest tests/ --cov=. --cov-report=xml --cov-report=html
@@ -72,4 +72,4 @@ jobs:
       run: python -m isort --check-only .
 
     - name: Lint with pylint
-      run: python -m pylint kiro_auto_recovery.py kiro_setup.py
+      run: python -m pylint archive/kiro_auto_recovery.py archive/kiro_setup.py
