feat: リリース準備完了 - ドキュメント整備とファイル整理

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,18 +5,19 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "ai-restarter"
 version = "0.1.0"
-description = "AI reStarter - Kiro-IDE自動復旧システム"
+description = "AI reStarter - AI統合IDE用自動復旧システム"
 authors = [{name = "Kiro Development Team"}]
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.8"
 license = {text = "MIT"}
 
 
-keywords = ["ai", "restarter", "kiro", "auto-recovery", "screen-capture", "error-detection"]
+keywords = ["ai", "restarter", "amazonq", "auto-recovery", "screen-capture", "error-detection", "template-matching"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -62,7 +63,7 @@ docs = [
 
 [tool.black]
 line-length = 88
-target-version = ['py39']
+target-version = ['py38']
 include = '\.pyi?$'
 extend-exclude = '''
 /(
@@ -85,7 +86,7 @@ line_length = 88
 known_first_party = ["kiro_auto_recovery"]
 
 [tool.mypy]
-python_version = "3.9"
+python_version = "3.8"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
