feat: リリースワークフローとpre-commit自動リフォーマットを追加

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,48 +1,35 @@
+# AI reStarter Pre-commit設定 - 自動リフォーマット重視
 repos:
+  # 基本的なファイル整理（自動修正）
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
-      - id: check-yaml
-      - id: check-added-large-files
-      - id: check-merge-conflict
-      - id: debug-statements
+      - id: trailing-whitespace        # 行末空白を自動削除
+      - id: end-of-file-fixer         # ファイル末尾改行を自動追加
+      - id: check-yaml                # YAML形式チェック
+      - id: check-added-large-files   # 大きなファイルの追加を防止
+      - id: check-merge-conflict      # マージコンフリクトマーカーをチェック
 
+  # Ruff - 高速なリンター・フォーマッター（最優先）
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.1.15
+    hooks:
+      - id: ruff
+        args: [--fix, --exit-non-zero-on-fix]  # 自動修正を実行
+      - id: ruff-format                        # コードフォーマット
+
+  # Black - コードフォーマッター
   - repo: https://github.com/psf/black
     rev: 24.1.1
     hooks:
       - id: black
         language_version: python3
+        files: '^(src|tests|main\.py).*\.py$'
 
+  # isort - インポート文の整理
   - repo: https://github.com/pycqa/isort
     rev: 5.13.2
     hooks:
       - id: isort
-        args: ["--profile", "black"]
-
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.1.9
-    hooks:
-      - id: ruff
-        args: [--fix, --exit-non-zero-on-fix]
-      - id: ruff-format
-
-  - repo: https://github.com/pycqa/flake8
-    rev: 7.0.0
-    hooks:
-      - id: flake8
-        args: [--max-line-length=88, --extend-ignore=E203,W503]
-
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.8.0
-    hooks:
-      - id: mypy
-        additional_dependencies: [types-Pillow]
-        args: [--ignore-missing-imports]
-
-  - repo: https://github.com/pycqa/pylint
-    rev: v3.0.3
-    hooks:
-      - id: pylint
-        args: [--rcfile=.pylintrc]
+        args: ["--profile", "black", "--force-single-line"]
+        files: '^(src|tests|main\.py).*\.py$'
