--- a/ruff.toml
+++ b/ruff.toml
@@ -1,30 +1,50 @@
-target-version = "py39"
-line-length = 88
+# Ruff設定ファイル - 自動リフォーマット用
 
-[lint]
+# 基本設定
+target-version = "py38"
+line-length = 88
 select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
     "F",   # pyflakes
     "I",   # isort
+    "UP",  # pyupgrade
     "B",   # flake8-bugbear
     "C4",  # flake8-comprehensions
-    "UP",  # pyupgrade
-    "N",   # pep8-naming
-    "S",   # flake8-bandit
-    "T20", # flake8-print
-    "SIM", # flake8-simplify
-]
-ignore = [
-    "E501",  # line too long (handled by black)
-    "S101",  # use of assert
-    "T201",  # print found (we use logging)
-    "F401",  # unused import (conditional imports)
-    "S603",  # subprocess call without shell=True check (intentional in test runner)
 ]
 
-[lint.per-file-ignores]
-"tests/*" = ["S101"]  # allow assert in tests
+ignore = [
+    "E501",  # line-too-long (blackが処理)
+    "E203",  # whitespace-before-punctuation (blackと競合)
+    "B008",  # function-call-in-default-argument
+]
+
+# 対象ファイル
+include = ["src/**/*.py", "tests/**/*.py", "main.py"]
+exclude = [
+    ".git",
+    ".mypy_cache",
+    ".ruff_cache",
+    ".venv",
+    "venv",
+    "__pycache__",
+    "build",
+    "dist",
+    "archive",
+]
+
+[format]
+# フォーマット設定
+quote-style = "double"
+indent-style = "space"
+line-ending = "auto"
 
 [lint.isort]
-known-first-party = ["kiro_auto_recovery"]
+# インポート整理設定
+force-single-line = true
+known-first-party = ["src"]
+
+[lint.per-file-ignores]
+# ファイル別の例外設定
+"tests/**/*.py" = ["B011"]  # テストでの例外を緩和
+"main.py" = ["E402"]       # メインファイルでのインポート順序を緩和
