--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install opencv-python numpy pyautogui Pillow keyboard pywin32 pyperclip
-        pip install ruff pytest pytest-cov black isort mypy pylint flake8
+        pip install -e ".[dev]"
 
     - name: Lint with ruff
       run: python -m ruff check .
@@ -62,8 +61,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install opencv-python numpy pyautogui Pillow keyboard pywin32 pyperclip
-        pip install ruff pytest pytest-cov black isort mypy pylint flake8
+        pip install -e ".[dev]"
 
     - name: Check code formatting with black
       run: python -m black --check src/ tests/ main.py
