chore: .gitignoreに自動生成されたファイルのエントリを追加

--- a/.gitignore
+++ b/.gitignore
@@ -198,3 +198,11 @@ uv.lock
 *.db
 node_modules/
 requirements.txt
+
+# Auto-generated entries
+*.pyc
+
+# Auto-generated entries
+.vscode/settings.json
+.vscode/launch.json
+.vscode/tasks.json
