git除外設定を追加

--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,13 @@ temp/
 tmp/
 yarn-debug.log*
 yarn-error.log*
+
+# Auto-generated entries from templates
+*.dll
+*.dylib
+*.exe
+*.exe~
+*.out
+*.test
+go.work
+vendor/
