--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ warn_unused_ignores = true
 warn_no_return = true
 warn_unreachable = true
 strict_equality = true
+exclude = ["archive/", "htmlcov/", ".mypy_cache/", ".ruff_cache/", "playground/"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
@@ -106,6 +107,10 @@ dev = [
     "pytest-cov>=6.0.0",
     "pytest-mock>=3.12.0",
     "types-Pillow>=10.0.0",
+    "types-psutil>=6.0.0",
+    "types-keyboard>=0.13.0",
+    "types-pyautogui>=0.9.0",
+    "types-pywin32>=306.0.0",
 ]
 test = [
     "pytest>=8.0.0",
