--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       run: python -m ruff format --check .
 
     - name: Type check with mypy
-      run: python -m mypy src/ --config-file=pyproject.toml || true || true
+      run: python -m mypy src/ --config-file=pyproject.toml
 
     - name: Test with pytest
       run: python -m pytest tests/ --cov=. --cov-report=xml --cov-report=html
@@ -75,4 +75,4 @@ jobs:
       run: python -m ruff format --check .
 
     - name: Type check with mypy
-      run: python -m mypy src/ --config-file=pyproject.toml || true
+      run: python -m mypy src/ --config-file=pyproject.toml
