--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,6 +27,6 @@ repos:
     hooks:
       - id: mypy
         args: [--config-file=pyproject.toml, --no-warn-unused-ignores]
-        exclude: ^tests/
+        exclude: ^(tests/|archive/|playground/|scripts/)
         additional_dependencies:
           - "types-Pillow"
