--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,7 +88,6 @@ ignore = [
     "DTZ",     # flake8-datetimez (タイムゾーンなしdatetimeは許容)
     "SIM",     # flake8-simplify (簡素化は段階的に)
     "T201",    # print-found (デバッグprintは段階的に削除)
-    "RUF059",  # unused-unpacked-variable (cv2.minMaxLoc等で必要)
     "NPY002",  # numpy-legacy-random (テストコードで legacy random使用許容)
     "PT009",   # pytest-unittest-assertion (unittest形式のアサート許容)
     "PT011",   # pytest-raises-too-broad (汎用Exception許容)
@@ -123,7 +122,7 @@ warn_unused_ignores = true
 warn_no_return = true
 warn_unreachable = true
 strict_equality = true
-exclude = ["archive/", "htmlcov/", ".mypy_cache/", ".ruff_cache/", "playground/", "tests/"]
+exclude = ["archive/", "htmlcov/", ".mypy_cache/", ".ruff_cache/", "playground/", "tests/", "scripts/"]
 
 # GUIファイルはtkinterの型定義が不完全なため、チェックを緩和
 [[tool.mypy.overrides]]
