feat: update branch references in CI/CD workflows to include 'master' alongside 'main' and 'develop'

--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -2,7 +2,7 @@ name: quality-check
 
 on:
   pull_request:
-    branches: [main, develop]
+    branches: [main, master, develop]
 
 permissions:
   contents: read
