--- a/.github/workflows/security-check.yml
+++ b/.github/workflows/security-check.yml
@@ -5,9 +5,9 @@ name: C# Security
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main, master, develop]
   pull_request:
-    branches: [main, develop]
+    branches: [main, master, develop]
   schedule:
     - cron: "0 0 * * 0" # Weekly on Sunday
 
