--- a/.github/workflows/security-check.yml
+++ b/.github/workflows/security-check.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   security-scan:
     name: .NET Security Scan
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -22,7 +22,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: "9.0.x"
+          dotnet-version: "8.0.x"
 
       - name: Restore dependencies
         run: dotnet restore
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Run OSV Scanner
-        uses: google/osv-scanner-action@v1
+        uses: google/osv-scanner-action@v1.8.2
         with:
           scan-args: |-
             --recursive
@@ -47,7 +47,7 @@ jobs:
 
   codeql:
     name: CodeQL Analysis
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     permissions:
       security-events: write
       actions: read
