chore: update .gitignore (setup from templates)

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,63 @@ target/
 *.tmp
 *.temp
 ~$*
+
+# Auto-generated entries from templates
+!.vscode/extensions.json
+$RECYCLE.BIN/
+*.7z
+*.DotSettings.user
+*.aps
+*.backup
+*.bak
+*.cache
+*.diff
+*.ilk
+*.obj
+*.orig
+*.patch
+*.pch
+*.pdb
+*.rar
+*.rej
+*.sublime-project
+*.sublime-workspace
+*.swo
+*.swp
+*.tar.gz
+*.tlog
+*.zip
+*~
+.DS_Store
+.DS_Store?
+.Spotlight-V100
+.Trashes
+._*
+.env
+.env.*.local
+.env.development.local
+.env.local
+.env.production.local
+.env.test.local
+.git-credential-cache/**
+.git-credential-store/**
+.git-credentials
+.git/refs/backup/
+.git/refs/bisect/
+.git/refs/original/
+.gitconfig-worktree
+.gitconfig.local
+.gitconfig.user
+.gitmodules.bak
+.gitmodules.local
+.vscode/*
+AppPackages/
+BundleArtifacts/
+Desktop.ini
+PATCHES/
+[Bb]in/
+[Ll]og/
+[Oo]bj/
+_ReSharper*/
+project.fragment.lock.json
+project.lock.json
