chore: update .gitignore (setup from templates)

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,12 @@ PATCHES/
 _ReSharper*/
 project.fragment.lock.json
 project.lock.json
+
+# Auto-generated entries from templates
+*.vsix
+.history/
+.vscode/*.code-snippets
+.vscode/extensions.json
+.vscode/launch.json
+.vscode/settings.json
+.vscode/tasks.json
