chore: update renovate configuration to use preset paths

--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "github>scottlz0310/renovate-config",
-    "github>scottlz0310/renovate-config:csharp",
-    "github>scottlz0310/renovate-config:automerge",
-    "github>scottlz0310/renovate-config:security"
+    "github>scottlz0310/renovate-config//presets/default",
+    "github>scottlz0310/renovate-config//presets/languages/csharp",
+    "github>scottlz0310/renovate-config//presets/tools/lefthook",
+    "github>scottlz0310/renovate-config//presets/options/automerge",
+    "github>scottlz0310/renovate-config//presets/options/security"
   ]
 }
