chore(gitignore): add Python packaging metadata to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ TestResult*/
 *.opencover.xml
 coverage.cobertura.xml
 
+# Python packaging metadata
+*.egg-info/
+
 # Generated files
 *.g.cs
 *.g.i.cs
