--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,7 @@
     "github>scottlz0310/renovate-config//presets/languages/csharp",
     "github>scottlz0310/renovate-config//presets/tools/lefthook",
     "github>scottlz0310/renovate-config//presets/options/automerge",
+    "github>scottlz0310/renovate-config//presets/options/schedule",
     "github>scottlz0310/renovate-config//presets/options/security"
   ]
 }
